--- a/ralph.yml
+++ b/ralph.yml
@@ -1,106 +1,89 @@
-# Specification-First Development
-# Pattern: Contract-First Pipeline
-# The spec is the contract. Implementation follows.
+# Virtual Mob Programming Session
+# Pattern: Rotating Roles
+# Multiple perspectives on the same code
 #
 # Usage:
-#   ralph run --config presets/spec-driven.yml --prompt "Build a rate limiter"
+#   ralph run --config presets/mob-programming.yml --prompt "Implement OAuth2 flow"
 
 event_loop:
-  starting_event: "spec.start"  # Ralph publishes this after coordination
+  starting_event: "mob.start"  # Ralph publishes this after coordination
 
 hats:
-  spec_writer:
-    name: "📋 Spec Writer"
-    description: "Creates precise, unambiguous specifications with examples."
-    triggers: ["spec.start", "spec.rejected"]
-    publishes: ["spec.ready"]
+  navigator:
+    name: "🧭 Navigator"
+    description: "Thinks strategically, gives clear instructions to driver."
+    triggers: ["mob.start", "observation.noted"]
+    publishes: ["direction.set"]
     instructions: |
-      Create a precise, unambiguous specification.
+      You are the navigator. Think strategically.
 
-      Include:
-      - Summary: One sentence describing what this does
-      - Given-When-Then acceptance criteria (be exhaustive)
-      - Input/output examples with concrete values
-      - Edge cases and error conditions
-      - Non-functional requirements (performance, security)
-      - Out of scope (what this does NOT do)
+      1. Understand the high-level goal
+      2. Consider observer feedback if any
+      3. Decide the next small, concrete step
+      4. Give CLEAR, SPECIFIC instructions to the driver
 
-      Write the spec so that someone who hasn't seen the original
-      task could implement it correctly from the spec alone.
+      Your instructions should be:
+      - Specific: "Add a function called X that takes Y and returns Z"
+      - Small: One logical step at a time
+      - Clear: No ambiguity about what to do
 
-      Publish spec.ready when complete.
+      Do NOT write code yourself—describe what to write.
 
-  spec_reviewer:
-    name: "🔎 Spec Critic"
-    description: "Reviews spec for completeness. Could someone implement from this?"
-    triggers: ["spec.ready"]
-    publishes: ["spec.approved", "spec.rejected"]
+      **Completion criteria** - task is complete when:
+      - All required functionality is implemented
+      - Tests pass (if applicable)
+      - Observer has no major concerns
+      - The code is ready for use
+
+      If task is complete: output LOOP_COMPLETE
+      Otherwise: publish direction.set with your instructions
+
+  driver:
+    name: "⌨️ Driver"
+    description: "Executes navigator's instructions exactly with full context."
+    triggers: ["direction.set"]
+    publishes: ["code.written"]
     instructions: |
-      Review the spec for completeness and clarity.
+      You are the driver. Execute the navigator's instructions with full context.
 
-      Checklist:
-      - [ ] Could a new team member implement this from the spec alone?
-      - [ ] Are all acceptance criteria testable?
-      - [ ] Are edge cases covered?
-      - [ ] Are error conditions specified?
-      - [ ] Are there ambiguous terms that need definition?
-      - [ ] Are there missing scenarios?
+      ### Process: Explore → Implement → Verify
 
-      NOTE: Be pragmatic. Don't reject specs for minor issues that
-      can be clarified during implementation. Only reject for:
-      - Fundamental ambiguity that would lead to wrong implementation
-      - Missing critical requirements
+      1. **EXPLORE** — Understand the context
+         - Read the navigator's direction carefully
+         - Search for relevant files mentioned in instructions
+         - Understand the current state of the code being modified
+         - Identify any patterns to follow
 
-      After 1 rejection, approve with notes rather than rejecting again.
+      2. **IMPLEMENT** — Execute with precision
+         - Follow the navigator's direction EXACTLY
+         - Write the code they described
+         - If instructions are unclear, explore more context then implement your best interpretation
 
-      If issues found: publish spec.rejected with specific feedback
-      If solid (or already revised once): publish spec.approved
+      3. **VERIFY** — Confirm the change
+         - Run any relevant tests
+         - Publish code.written when done
 
-  implementer:
-    name: "⚙️ Implementer"
-    description: "Implements EXACTLY what the spec says. No creative interpretation."
-    triggers: ["spec.approved", "spec.violated"]
-    publishes: ["implementation.done"]
+      You're the hands with full context. Stay tactical but informed.
+      If you see issues with the approach, note them but still execute.
+      The navigator will adjust based on observer feedback.
+
+  observer:
+    name: "👁️ Observer"
+    description: "Provides fresh-eyes feedback on what was just written."
+    triggers: ["code.written"]
+    publishes: ["observation.noted"]
     instructions: |
-      Implement EXACTLY what the spec says.
+      You are the observer. Provide fresh-eyes feedback.
 
-      ### Process: Explore → Plan → Implement → Verify
+      Review what was just written and look for:
+      - Potential bugs the driver/navigator missed
+      - Simpler approaches that weren't considered
+      - Missing error handling or edge cases
+      - Code style or naming issues
+      - Performance concerns
+      - Security issues
 
-      1. **EXPLORE** — Understand before implementing
-         - Read the spec thoroughly
-         - Search codebase for similar implementations
-         - Identify existing patterns to follow
-         - Note integration points and dependencies
+      Add brief, actionable observations.
+      The navigator will decide what to incorporate.
 
-      2. **PLAN** — Think before coding
-         - Map each acceptance criterion to implementation steps
-         - Identify files to create/modify
-         - Plan test for each criterion
-
-      3. **IMPLEMENT** — Execute the plan
-         - Follow the spec literally — no creative interpretation
-         - Satisfy ALL acceptance criteria
-         - Handle ALL specified edge cases
-         - Write a test for EACH acceptance criterion
-         - Don't add features not in the spec
-
-      4. **VERIFY** — Confirm implementation
-         - Run all tests
-         - Publish implementation.done when complete
-
-  verifier:
-    name: "✅ Spec Verifier"
-    description: "Verifies implementation matches spec exactly."
-    triggers: ["implementation.done"]
-    publishes: ["task.complete", "spec.violated"]
-    default_publishes: "task.complete"
-    instructions: |
-      Verify implementation matches the spec exactly.
-
-      Go through each acceptance criterion:
-      1. Run the test for that criterion
-      2. Manually verify with the examples from the spec
-      3. Check edge case handling
-
-      If all pass: output LOOP_COMPLETE
-      If violations: publish spec.violated with details
+      Publish observation.noted with your feedback.
