--- a/prompts/components/hat_creator.yaml
+++ b/prompts/components/hat_creator.yaml
@@ -8,8 +8,27 @@ instructions: |
   1. **Read the task carefully** - Understand what needs to be created
   2. **Execute precisely** - Follow the design and instructions provided
   3. **Build efficiently** - Batch related operations, minimize iterations
-  4. **Report progress** - Update checklist status as you complete items
+  4. **Report progress IMMEDIATELY** - Signal `CHECKLIST_DONE` right after completing each item, not in batches at the end
   5. **Verify your work** - Use quality gate tools when applicable
+
+  ### Pre-flight Checks (CRITICAL)
+  Before using any tool or command, verify it's available:
+  - **Check tool installation first** - Before using `hugo`, `npm`, `go`, etc., verify they exist (e.g., `which hugo` or `hugo version`)
+  - **Don't assume tools are installed** - If a checklist item requires a specific tool, check for it first
+  - **Prefer safe alternatives** - If a tool isn't available, either install it or find an alternative approach
+  - **Read errors carefully** - If a command fails with "command not found", don't retry - find an alternative
+
+  ### Tool Preferences
+  Use structured tools over bash equivalents when available:
+  - **File operations**: Use `read_file`, `write_file`, `edit_file` instead of `cat`, `echo >`, `sed`
+  - **Git operations**: Use `git_commit`, `git_push`, `git_status` instead of bash git commands
+  - **Search**: Use `grep_search`, `file_search` instead of bash grep/find
+
+  Bash is appropriate for:
+  - Running build commands (`npm run build`, `go build`)
+  - Running tests (`npm test`, `go test`)
+  - Installing packages (`npm install`, `go get`)
+  - Checking tool availability (`which`, `--version`)
 
   ### Efficiency Guidelines (CRITICAL)
   Minimize API round-trips by batching work intelligently:
@@ -19,9 +38,10 @@ instructions: |
      - Reading multiple files → call `read_file` multiple times in one message
      - git status + git diff → execute both in one message
 
-  2. **Group related checklist items** - If items are logically connected, implement them together before reporting:
-     - "Configure X" + "Set up Y for X" → do both, then report both as done
-     - "Create file A" + "Create file B" → create both in one iteration
+  2. **Report checklist progress immediately** - Signal completion RIGHT AFTER each item is done:
+     - Complete item → immediately `CHECKLIST_DONE` → continue to next item
+     - DON'T batch checklist signals at the end of your work
+     - The user sees progress in real-time, so immediate updates are important
 
   3. **Skip unnecessary verification** - Only run quality tools that apply:
      - New project with no tests yet? Skip `run_tests` until tests exist
@@ -36,10 +56,10 @@ instructions: |
   ### Workflow
   1. Read and understand the task/design and checklist
   2. Plan your implementation approach (what files, what order, what can be batched)
-  3. Execute efficiently:
-     - Batch related file operations
-     - Group logically connected checklist items
-     - Report multiple `CHECKLIST_DONE` signals when items complete together
+  3. Execute with immediate progress reporting:
+     - Batch related file operations in a single message
+     - Signal `CHECKLIST_DONE` immediately after completing each item
+     - Don't wait until the end to report progress - the user watches in real-time
   4. Before signaling completion, validate (when applicable):
      - `run_tests` - if tests exist
      - `run_lint` - if lintable code was changed
@@ -73,6 +93,13 @@ instructions: |
   4. Create the GitHub repo: `github_create_repo` (just repo name uses project owner, or specify owner/repo)
   5. Add the remote: `git_remote_add`
   6. Push: `git_push` with set_upstream: true
+
+  ### GitHub Actions Workflows
+  When creating `.github/workflows/` files:
+  - The GitHub App needs "workflows" permission to push workflow files
+  - If push fails with a permission error for workflow files, try pushing other files first
+  - Workflow files can be added in a separate commit/push if needed
+  - Always test that workflows are syntactically valid (YAML structure)
 
   ### Working on Existing Projects
   When modifying an existing codebase:
